# Placenta-Morphometry

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Population.h  README.md  copy_to_tars (outdated).sh  main.cpp  placenta_job.sh  placenta_job_start.sh  run_me_tars.sh  sbatch_one_job.sh  start_local.sh
core/algorithm/: Analysis.h  AnalysisAdvanced.h  Application.h  Convertor.h  Draw.h  Experimental.h  Feature.h  FunctionProcedureFunctorF.h  GeometricalTransformation.cpp  GeometricalTransformation.h  LinearAlgebra.cpp  LinearAlgebra.h  PDE.h  PDEAdvanced.h  Processing.h  ProcessingAdvanced.h  ProcessingVideo.h  RandomGeometry.cpp  RandomGeometry.h  Representation.h  Statistics.cpp  Statistics.h  Visualization.cpp  Visualization.h
core/data/3d/: GLFigure.cpp  GLFigure.h
core/data/GP/: CartesianProduct.h  Dynamic2Static.h  Factory.h  LokiTypeInfo.h  Singleton.h  Type2Id.h  TypeTraitsTemplateTemplate.h  Typelist.h
core/data/distribution/: Distribution.cpp  Distribution.h  DistributionAnalytic.cpp  DistributionAnalytic.h  DistributionArithmetic.cpp  DistributionArithmetic.h  DistributionFromDataStructure.cpp  DistributionFromDataStructure.h  DistributionMultiVariate.cpp  DistributionMultiVariate.h  DistributionMultiVariateArithmetic.cpp  DistributionMultiVariateArithmetic.h  DistributionMultiVariateFromDataStructure.cpp  DistributionMultiVariateFromDataStructure.h
core/data/functor/: FunctorF.h  FunctorPDE.h
core/data/germgrain/: Germ.h  GermGrain.cpp  GermGrain.h
core/data/mat/: Mat2x.h  MatN.h  MatNBoundaryCondition.h  MatNDisplay.cpp  MatNDisplay.h  MatNInOut.cpp  MatNInOut.h  MatNInOutImpl.h  MatNIteratorE.h  MatNListType.cpp  MatNListType.h
core/data/neuralnetwork/: NeuralNetwork.cpp  NeuralNetwork.h
core/data/notstable/: CharacteristicCluster.cpp  CharacteristicCluster.h  Classifer.h  Descriptor.h  Ransac.cpp  Ransac.h  Wavelet.h
core/data/notstable/contour/: Contour.cpp  Contour.h
core/data/notstable/graph/: Edge.cpp  Edge.h  Graph.h  Vertex.cpp  Vertex.h
core/data/ocr/: OCR.cpp  OCR.h
core/data/population/: PopulationData.h  PopulationFunctor.h  PopulationPDE.h  PopulationQueues.h
core/data/typeF/: Complex.h  RGB.h  TypeTraitsF.cpp  TypeTraitsF.h
core/data/utility/: BSPTree.h  BasicUtility.cpp  BasicUtility.h  CollectorExecutionInformation.cpp  CollectorExecutionInformation.h  Configuration.h  Exception.cpp  Exception.h  XML.cpp  XML.h
core/data/vec/: Vec.h  VecN.h
core/data/video/: Video.cpp  Video.h
core/dependency/: ConvertorCImg.h  ConvertorOpenCV.cpp  ConvertorOpenCV.h  ConvertorQImage.cpp  ConvertorQImage.h  MTRand.cpp  MTRand.h  fparser.cpp  fparser.hh  fptypes.hh  jpgd.cpp  jpge.cpp  lodepng.cpp  log.h  pugixml.cpp
core/dependency/tesseract/include/tesseract/: platform.h
population_sacha/: Calculate_percentage_of_a_color_on_contours.cpp  Calculate_percentage_of_a_color_on_contours.h  Choose_input_folder.cpp  Choose_input_folder.h  Close_regions.cpp  Close_regions.h  Copy_original_image.cpp  Copy_original_image.h  Create_dot_finished_file.cpp  Create_dot_finished_file.h  Create_results_folder.cpp  Create_results_folder.h  Discriminate_capillaries_from_IVS.cpp  Discriminate_capillaries_from_IVS.h  Estimate_villi_density.cpp  Estimate_villi_density.h  Extract_contours.cpp  Extract_contours.h  Find_thresholds_for_a_matrix.cpp  Find_thresholds_for_a_matrix.h  General_execution_log.txt  Global_variables.h  Initial_segmentation.cpp  Initial_segmentation.h  Load_placenta_picture.cpp  Load_placenta_picture.h  Log_steps.cpp  Log_steps.h  Open_regions.cpp  Open_regions.h  Output_statistics.cpp  Output_statistics.h  Read_next_image.cpp  Read_next_image.h  Remove_IVS_and_villous_regions_by_area.cpp  Remove_IVS_and_villous_regions_by_area.h  Remove_IVS_inside_villi.cpp  Remove_IVS_inside_villi.h  Segmentation_parameters.h  Shift_vector_by_one.h  (+10 more)
results analysis code/: 01PC_Combining statistics for a section.nb  01_Combining statistics for a section.nb  02a_Analysis of segmentation statistics.nb  03_Analysis of segmentation statistics_no_lower_area_limit.nb  04_03_New_Analysis of segmentation statistics.nb  04a_03_Analysis of segmentation statistics_perimeter_density.nb  04b_03_Analysis of segmentation statistics_effective_radius.nb  04c_03_Analysis of segmentation statistics_perimeter_density.nb  05_Prepare data for the article.nb  901_1A and 2B comparison.nb  902_Fitting comparison.nb  Different_approximations.nb  files_number.nb  temp1.nb
tiff_cut_code/: Resolutions  iterate_cut_tif.sh
